# example-rs-github-stars

./: Cargo.toml  README.md  clippy.toml  deny.toml
.github/workflows/: labels.yml  rust.yml
scripts/: template_update.py
src/: main.rs
