[package]
name = "github_star_history"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
rust-version = "1.74"
version = "0.1.0"

[dependencies]
re_log = "0.13"
rerun = { version = "0.13", features = ["clap"] }

anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
gh-token = "0.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
