[package]
authors = ["rerun.io <opensource@rerun.io>"]
edition = "2021"
homepage = "https://github.com/rerun-io/example-rs-github-stars"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
license = "MIT OR Apache-2.0"
publish = false
name = "github_star_history"
readme = "README.md"
repository = "https://github.com/rerun-io/example-rs-github-stars"
rust-version = "1.76"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true


[dependencies]
re_log = "0.18"
rerun = { version = "0.18", features = ["clap"] }

anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
gh-token = "0.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
